kube/manifests/gitea/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:latest-rootless
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: "/var/lib/gitea"
          name: gitea-data
        - mountPath: "/etc/gitea"
          name: gitea-etc
      volumes:
        - name: gitea-data
          persistentVolumeClaim:
            claimName: gitea-data-pvc
        - name: gitea-etc
          persistentVolumeClaim:
            claimName: gitea-etc-pvc
