kube/manifests/gitea/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea-service
spec:
  selector:
    app: gitea
  ports:
    - protocol: TCP
      name: web
      port: 3000
    - protocol: TCP
      name: ssh
      port: 2222
      targetPort: 22
